--- a/app/src/main/res/layout/activity_editvehicaldetails.xml
+++ b/app/src/main/res/layout/activity_editvehicaldetails.xml
@@ -14,13 +14,13 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="92dp"
-        android:layout_height="37dp"
+        android:layout_width="135dp"
+        android:layout_height="45dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="35dp"
         android:text="@string/model2"
         android:textColor="#FDFDFD"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include2" />
 
@@ -31,6 +31,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="35dp"
         android:text="@string/makeyear2"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -44,7 +45,7 @@
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/makeyear"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -57,7 +58,7 @@
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/model"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -68,6 +69,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="35dp"
         android:text="@string/fueltype"
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -79,6 +81,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="35dp"
         android:text="Vehicle No."
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -92,7 +95,7 @@
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/licenceno"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -103,6 +106,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="35dp"
         android:text="Insuarance No."
+        android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -115,32 +119,33 @@
         android:layout_marginTop="35dp"
         android:text="Vehicle Details"
         android:textColor="#FFFFFF"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <EditText
         android:id="@+id/et_edit_insurance_no"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="184dp"
+        android:layout_height="44dp"
         android:layout_marginEnd="50dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/insuarance"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/et_edit_vehicle_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="181dp"
+        android:layout_height="45dp"
         android:layout_marginEnd="50dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/notes"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -151,18 +156,19 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="100dp"
         android:text="Edit Detail"
-        app:backgroundTint="#3399FF"
+        app:backgroundTint="@color/button_color"
         app:layout_constraintEnd_toStartOf="@+id/btn_delete_vehicle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <EditText
         android:id="@+id/et_edit_fuel_type"
-        android:layout_width="145dp"
-        android:layout_height="46dp"
+        android:layout_width="185dp"
+        android:layout_height="53dp"
         android:layout_marginEnd="50dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -172,7 +178,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         android:text="Delete Detail"
-        app:backgroundTint="#3399FF"
+        app:backgroundTint="@color/button_color"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_edit_vehicle"
         app:layout_constraintEnd_toEndOf="parent" />
 
