--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -272,6 +272,7 @@
                     android:foreground="?android:attr/selectableItemBackground">
 
                     <LinearLayout
+                        android:id="@+id/ll_aboutUs"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
